[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlframe"
dynamic = ["version"]
description = "Production-grade machine learning framework for tabular data: training pipelines, feature engineering & selection, ensembling, calibration, ranking, and quantile regression."
authors = [{name = "Anatoly Alexeev", email = "fingoldo@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "machine-learning",
    "scikit-learn",
    "catboost",
    "lightgbm",
    "xgboost",
    "feature-engineering",
    "feature-selection",
    "ensembling",
    "calibration",
    "ranking",
    "quantile-regression",
    "tabular",
    "automl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Minimal hard requirements so `pip install mlframe` stays light.
# Domain-specific stacks (catboost / lightgbm / shap / mlflow / ...) ship as extras.
dependencies = [
    # Upper cap <2.5: numba 0.65.1 (latest) rejects numpy 2.5 at import ("Numba needs NumPy 2.4 or less").
    # pip honours this (it ignores [tool.uv].override-dependencies, which carries the matching cap for uv).
    "numpy>=1.23,<2.5",
    "pandas>=1.5",
    "polars>=0.20",
    "scipy>=1.10",
    # >=1.6: category-encoders (a hard dep below) imports ``sklearn.utils.Tags``, which only exists from
    # sklearn 1.6; on older sklearn ``import category_encoders`` fails, so 1.6 is mlframe's effective floor.
    "scikit-learn>=1.6",
    "pyarrow>=10.0",
    "joblib>=1.2",
    "tqdm>=4.65",
    "pydantic>=2.0",
    "portalocker>=2.7",
    "dill>=0.3.6",
    "orjson>=3.9",
    "numba>=0.59",  # numpy-2-compatible floor (numba <0.59 is built against the numpy 1.x ABI)
    "psutil>=5.9",
    "matplotlib>=3.7",
    # The four below are imported UNCONDITIONALLY at module load time across
    # src/mlframe/{feature_engineering/numerical,feature_selection/filters/*}
    # and would otherwise raise ImportError on `import mlframe`. Audited via
    # AST top-level scan on 2026-05-15.
    "antropy>=0.1",
    # 2026-05-28: astropy removed from CORE deps. Native impls of Bayesian Blocks
    # (Scargle 2013) and Knuth's rule (Knuth 2006) ship in
    # feature_selection/filters/discretization.py:histogram(). All consumers
    # (feature_engineering/numerical.py, _numerical_numba.py,
    # feature_selection/filters/_mrmr_fingerprints.py) wrap the astropy import
    # in try/except with np.histogram fallback, so removing astropy from core
    # only loses the optional astropy-only bin schemes. Listed in [signal]
    # extras below for callers who want them.
    "category-encoders>=2.6",
    "expiringdict>=1.2",
    "pympler>=1.0",   # used via pyutilz.system; unconditional import in tests/feature_engineering/*
    # pyutilz is not yet on PyPI. Install it from GitHub before mlframe:
    #   pip install "pyutilz @ git+https://github.com/fingoldo/pyutilz.git"
    # The version specifier below works once pyutilz is published; until then,
    # pip needs to resolve pyutilz from the user's environment (already installed).
    "pyutilz>=1.0.0",
    # numpy<2 on Python 3.9 only: the sole 3.9-compatible astropy (5.x, pulled by [signal]/[all]) is built
    # against the numpy 1.x ABI and no numpy-2-ready astropy supports 3.9, so numpy 2.x there breaks every
    # astropy C-extension import. Mirrored in [tool.uv].override-dependencies so plain pip honours it too.
    "numpy<2.0; python_version < '3.10'",
]

# uv-specific resolver overrides. Honored by `uv pip install` (verified with
# uv 0.11) as well as `uv lock`/`uv sync`.
[tool.uv]
# optbinning 0.21.0 (latest) conservatively pins ortools>=9.4,<9.12, but ortools
# ships cp313/cp314 wheels only from 9.12+ — so the unpatched cap makes the [all]
# extra uninstallable on Python 3.13/3.14. optbinning is pure-Python and its
# CP-SAT solver path was verified working against ortools 9.15 on py3.14
# (OptimalBinning(solver="cp") -> status OPTIMAL), so the cap is purely
# conservative. Override it to the cp313/cp314-capable line; ortools 9.12-9.15
# all still publish cp39-cp312 wheels, so this is safe across the whole matrix.
#
# numpy<2 on Python 3.9: the only 3.9-compatible astropy (5.x, pulled by [signal]/[all])
# is built against the numpy 1.x ABI, and no numpy-2-ready astropy supports 3.9 (6.1+ needs
# 3.10+). With numpy 2.x resolved on 3.9 every astropy C-extension import raises
# "ValueError: numpy.dtype size changed ... binary incompatibility", cascading into thousands
# of collection failures. Pinning numpy<2 on 3.9 only (3.10+ keep numpy 2.x) restores the
# numpy-1 ABI world the whole 3.9 C-extension stack (astropy/numba 0.60/pyarrow) was built for.
override-dependencies = [
    "ortools>=9.12",
    # An override-dependencies entry REPLACES a package's resolved constraints. With ONLY the py<3.10 numpy
    # entry, on py>=3.10 its marker is False, leaving numpy with zero active override entries -- uv then treats
    # numpy as overridden-to-nothing and PRUNES it from the resolution entirely (pandas/sklearn install, numpy
    # does not -> ModuleNotFoundError at import). The complementary py>=3.10 entry keeps numpy constrained
    # (>= the declared floor) on every interpreter, so it is never pruned. py3.9 still gets the numpy<2 ABI pin.
    # Upper cap <2.5: numba 0.65.1 (latest, the only line with py3.13/3.14 wheels) rejects numpy 2.5 at import
    # ("Numba needs NumPy 2.4 or less"); without the cap the resolver pulls numpy 2.5 and every numba import dies.
    "numpy<2.0; python_version < '3.10'",
    "numpy>=1.23,<2.5; python_version >= '3.10'",
]

[project.optional-dependencies]
# Gradient-boosting backends used by the training pipeline.
boosting = [
    "catboost>=1.2",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

# Calibration + uncertainty + interpretability stack.
# pycalib is dev-only on PyPI (no stable 0.1.0 release as of 2026-05-15);
# we permit pre-releases via dev0 floor + post-release matching.
calibration = [
    "shap>=0.44",
    "venn-abers>=1.4",
    "netcal>=1.3",
    "betacal>=1.1",
    "pycalib>=0.1.0.dev0",
    "uncertainty-calibration>=0.1",
    "properscoring>=0.1",
]

# Neural-network training stack (PyTorch + Lightning).
# `lightning` is the canonical post-2.0 distribution name and the only one we
# depend on: every neural module imports `lightning`/`lightning.pytorch`, with
# `pytorch_lightning` used purely as a defensive fallback for users who happen
# to have that legacy re-export installed. We deliberately do NOT pin
# `pytorch-lightning` here — installing both is redundant and invites
# version-skew warnings (`lightning` already vendors the same code).
# `captum` powers the native NN feature-importance path
# (``_captum_integrated_gradients_importance`` in evaluation.py);
# 2026-05-26 bench matched permutation recall@10=1.00 with a ~5x
# speedup on the 500-feature scenario. Optional within the neural
# extras: when absent ``get_model_feature_importances`` falls back
# to permutation (which is always available via sklearn).
neural = [
    # Keep torch on a CUDA-12.x build (``+cu12x``) to match cupy-cu12x + the system CUDA 12.9 / numba.
    # A ``+cu130`` build loads cudart/cublas 13 native libs that COLLIDE with the cu12 ecosystem in one
    # process -> hard native crashes (heap corruption / cublas INVALID_VALUE) even on CPU inference. On
    # Python 3.14 only nightly wheels exist; install from the cu128 index, NOT the default cu130 nightly:
    #   pip install --pre torch torchvision --index-url https://download.pytorch.org/whl/nightly/cu128
    "torch>=2.0",
    "lightning>=2.0",
    "captum>=0.7",
    # Frozen text-embedding path for neural models (HuggingFaceProvider: AutoTokenizer + AutoModel -> pooled vectors).
    "transformers>=4.30",
    # transformers >=5 builds the fast (Rust) tokenizer and converts slow tokenizers via sentencepiece;
    # required for sentencepiece-based embedders (T5/mT5/XLM-R/ALBERT/...) or every from_pretrained raises
    # "Couldn't instantiate the backend tokenizer ... need sentencepiece or tiktoken".
    "sentencepiece>=0.1.99",
]

# AutoML + hyperparameter optimization.
automl = [
    "flaml>=2.0",
]

# Feature-engineering generators: PySR (symbolic regression) discovers
# polynomial/algebraic features; optbinning emits WoE / monotonic-binned
# encodings. Both are used by ``preprocessing_extensions_config`` /
# ``MRMR.fe_max_steps`` paths -- they belong with feature engineering,
# not with AutoML hyperparameter search.
# ``cma`` powers the default Hermite-FE pair optimiser
# (``_hermite_fe_optimise_pair.optimise_hermite_pair(optimizer='cma')``)
# and its ``cma_batch`` variant; without it the dispatcher silently
# returns ``None`` and downstream FE skips engineered candidates.
# ``optuna`` backs the legacy TPE optimiser path (``optimizer='optuna'``)
# kept for benchmark comparisons in tests/feature_selection/
# test_biz_val_filters_hermite_fe.py and as a fallback hint in the
# error message.
feature_engineering = [
    "pysr>=0.18",
    "optbinning>=0.21",  # 0.20.x calls sklearn check_array(force_all_finite=...), removed in sklearn 1.6+; 0.21 uses ensure_all_finite
    "cma>=3.2",
    "optuna>=3.0",
]

# Resampling, encoding, stratification.
sampling = [
    "imbalanced-learn>=0.11",
    "iterative-stratification>=0.1.7",
]

# Polars stack: extras on top of the core polars dep (TA-Lib, DS helpers).
# Polars itself is a hard requirement and lives in [project].dependencies.
polars_ext = [
    "polars-talib>=0.1",
    "polars-ds>=0.4",
]

# Plotting and dashboards.
# ``ipywidgets`` is pulled in for CatBoost's MetricVisualizer (the ``plot=True``
# code path lazy-loads ``ipywidgets`` and re-raises ImportError when it's
# missing -- triggered transitively even when mlframe sets plot=False, on
# certain CB minor builds). Pinning here keeps the windows CI runner from
# failing on ``ModuleNotFoundError: No module named 'ipywidgets'`` inside
# ``catboost/widget/ipythonwidget.py``.
viz = [
    "plotly>=5.15",
    "seaborn>=0.13",
    "altair>=5.0",
    "hvplot>=0.9",
    "vegafusion[embed]>=1.5",
    "vl-convert-python>=1.0",
    "ipywidgets>=8.0",
]

# Experiment tracking.
mlflow = [
    "mlflow>=2.5",
]

# Database and storage backends.
db = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymongo>=4.5",
    "duckdb>=0.9",
    "zstandard>=0.21",
]

# Signal-processing / scientific extras (entropy, wavelets, astropy).
signal = [
    "antropy>=0.1.4",
    "astropy>=5.3",
    "entropy-estimators>=0.0.1",
    "pywavelets>=1.4",
    "ruptures>=1.1",
]

# Dimensionality reduction and clustering.
unsupervised = [
    "hdbscan>=0.8.33",
    "umap-learn>=0.5",
]

# Classical statistics.
stats = [
    "statsmodels>=0.14",
]

# GPU acceleration (CuPy). The CuPy wheel is CUDA-major-specific, so pick the extra matching your CUDA toolkit:
#   - mlframe[gpu]  / mlframe[gpu-cuda12]  -> CUDA 12.x (Python 3.10-3.14). cuda12x wheel + [ctk] (bundled
#     NVRTC/ptxas/nvvm/headers) so it runtime-compiles with no system CUDA toolkit; nvcc-cu12 adds ptxas/nvvm/
#     libdevice for numba.cuda.
#   - mlframe[gpu-cuda11]                  -> CUDA 11.x. NOTE: cupy ships cuda11x wheels only through cupy 13.x on
#     Python <=3.12; there is NO cuda11x wheel for Python 3.13+/cupy 14, so CUDA-11 is supported on Python <=3.12.
# The mlframe code itself uses only long-stable CuPy APIs (RawKernel/ReductionKernel/cuda.runtime/einsum/...) and
# numba.cuda (>=CUDA 11.2), so nothing here requires CUDA 12 -- the constraint is purely wheel availability.
# CUDA-11 / non-NVIDIA users stay on CPU (these extras are opt-in).
gpu = [
    "cupy-cuda12x[ctk]>=14.0,<15.0",
    "nvidia-cuda-nvcc-cu12>=12.9",
    "gpu-info>=0.1",
]
gpu-cuda12 = ["mlframe[gpu]"]
gpu-cuda11 = [
    "cupy-cuda11x>=12.0,<14.0",
    "nvidia-cuda-nvcc-cu11>=11.8",
    "gpu-info>=0.1",
]

# Transformer-style FE subpackage extras (see mlframe.feature_engineering.transformer).
# - transformer:       core CPU-only path; numba is already a hard dep, this is a marker for users wanting just the CPU blocks.
# - transformer_ann:   row-attention ANN backend (hnswlib).
# - transformer_gpu:   GPU acceleration on the two stages that win (RFF matmul + row-attention stage-4 fused RawKernel).
# - transformer_full:  ANN + GPU.
# cuVS / cagra is intentionally NOT in extras; no Windows wheel exists. WSL2/Linux users install manually via
# `mamba install -c rapidsai -c conda-forge cuvs` if they want GPU ANN.
transformer = []
transformer_ann = [
    # pynndescent is the default ANN backend (numpy 2 compatible, no C extension, Windows-safe).
    # hnswlib was the original choice; its wheels on Windows + numpy 2 segfault at import (built against numpy 1.x). Users with a working hnswlib can opt in
    # via the `ann_backend="hnswlib"` parameter but it's not in the extra to avoid surprise installs of a broken wheel.
    "pynndescent>=0.5",
]
# cupy window kept identical to the `gpu` extra (same lower bound + `[ctk]`
# bundled CUDA libs) so `mlframe[gpu,transformer_gpu]` resolves without a
# conflicting intersection and both paths runtime-compile against the same libs.
transformer_gpu = [
    "cupy-cuda12x[ctk]>=14.0,<15.0",
]
# CUDA-11 variant (Python <=3.12 only -- no cuda11x wheel for cupy 14 / Python 3.13+).
transformer_gpu_cuda11 = [
    "cupy-cuda11x>=12.0,<14.0",
]
transformer_full = [
    "mlframe[transformer_ann,transformer_gpu]",
]

# Convenience meta-extra: union of all runtime extras (CPU only; GPU via [gpu]
# / [transformer_gpu], docs via [docs], dev tooling via [dev] are intentionally
# excluded since they are not runtime concerns).
all = [
    "mlframe[boosting,calibration,neural,automl,feature_engineering,sampling,polars_ext,viz,mlflow,db,signal,unsupervised,stats,transformer_ann]",
]

# Documentation site (MkDocs Material). Build with `mkdocs build` / serve with `mkdocs serve`.
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.24",
]

# Development tooling.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.1",
    "pytest-benchmark>=4.0",
    "pytest-order>=1.2",          # pytest.mark.order(index=N) in tests/training/test_biz_val_training_core.py
    "pytest-randomly>=3.0",       # local-dev shuffle plugin. CI workflows disable it via `-p no:randomly` (see .github/workflows/*.yml) - local runs exercise random-order ordering to surface state-leak bugs, CI runs deterministic so flake triage stays clean.
    "pytest-instafail>=0.5",      # --instafail: streams tracebacks immediately on failure so worker-death INTERNALERRORs don't swallow the FAILURES section
    "pytest-progress>=1.3",       # --show-progress: prints [NN%] [N/Total] prefix on each test result line so long xdist runs surface percent-complete instead of opaque per-line PASSED chatter
    "pytest-split>=0.8",          # --splits/--group: shard the suite across parallel CI jobs (21k+ tests overflow a single 2-core runner's 90-min cap, see .github/workflows/ci.yml)
    "coverage>=7.2",
    "hypothesis>=6.80",
    "freezegun>=1.2",             # frozen-time fixtures in tests/perf and tests/training calibration suites
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "pre-commit>=3.3",
    # IPython is imported unconditionally by src/mlframe/evaluation/reports.py
    # and training/evaluation.py (for display_html / rich-shell detection).
    # Required so test collection of the modules that import them succeeds.
    "ipython>=8.0",
]

[project.scripts]
mlframe-tune-kernels = "mlframe.system.kernel_tuning_cache:main"

[project.urls]
Homepage = "https://github.com/fingoldo/mlframe"
Documentation = "https://fingoldo.github.io/mlframe/"
Repository = "https://github.com/fingoldo/mlframe.git"
Issues = "https://github.com/fingoldo/mlframe/issues"
Changelog = "https://github.com/fingoldo/mlframe/blob/master/CHANGELOG.md"

[tool.setuptools]
# Do NOT auto-include everything MANIFEST.in matches as package data; that would
# ship the dev _benchmarks trees into the wheel. Only the explicit package-data
# below is bundled. MANIFEST.in still governs the sdist.
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "mlframe.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mlframe*"]
exclude = ["tests*", "legacy*", "benchmarks*", "profiling*", "docs*", "scripts*", "*._benchmarks", "*._benchmarks.*"]

# Static data files shipped with the wheel (if any).
[tool.setuptools.package-data]
mlframe = ["py.typed"]
# The anonymized default kernel-tuning JSON is consulted at runtime by
# filters._kernel_tuning (register_default_cache), so it MUST ship in the wheel.
"mlframe.feature_selection.filters" = ["default_kernel_tuning.json"]
# Vendored infonet configs referenced by its inference entry point.
"mlframe.feature_selection.filters._vendored.infonet" = ["configs/*.yaml"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
# -p no:anyio / no:asyncio: the repo has zero async tests, and both transitively-installed async pytest plugins segfault the interpreter during collection on this stack -- anyio under CUDA_VISIBLE_DEVICES="" (CPU-only / CI), asyncio under a visible GPU (their event-loop native init collides with the CUDA/numba context). Unused plugins, so unloading both is pure upside.
addopts = "-ra -s --no-cov --strict-markers --strict-config --timeout=600 --instafail --ignore=legacy --ignore=benchmarks --ignore=profiling -p no:anyio -p no:asyncio"
xfail_strict = true
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring full pipeline",
    "gpu: marks tests requiring GPU hardware",
    "benchmark: pytest-benchmark timing tests",
    "multigpu: requires multiple GPUs",
    "windows_only: skip on non-Windows",
    "linux_only: skip on non-Linux",
    "fast: fast subset (select with '-m fast'). Every new ML feature ships with a representative subset marked @pytest.mark.fast so the full code path runs in <15s total.",
    "slow_only: only runs when --slow flag is passed",
    "no_xdist: cannot run under pytest-xdist parallelism",
    "requires_xgb: requires xgboost",
    "requires_cb: requires catboost",
    "requires_torch: requires torch",
    "uses_matplotlib: test produces matplotlib figures; triggers plt.close('all') + gc in cleanup_memory autouse",
    "uses_torch: test allocates GPU/CPU torch tensors; triggers torch.cuda.empty_cache in cleanup_memory autouse",
    "numba_disabled: include in the NUMBA_DISABLE_JIT=1 nightly coverage run; tests run 10-100x slower under no-JIT, see scripts/run_numba_coverage.{sh,ps1}",
    "sklearn_matrix: include in the multi-sklearn-version CI matrix (.github/workflows/sklearn-matrix-ci.yml); tests pin scikit-learn surface contracts across the supported version range (1.6-1.8) and must NOT depend on private internals. See tests/test_meta/test_sklearn_matrix_marker_invariants.py for the convention.",
]
filterwarnings = [
    "error::DeprecationWarning:mlframe",
    "ignore::DeprecationWarning",
    "ignore:.*penalty.*deprecated.*1\\.8:FutureWarning:sklearn",
    "ignore:.*quantile_method.*linear.*averaged_inverted_cdf:FutureWarning:sklearn",
    "ignore:X does not have valid feature names.*LGBMClassifier:UserWarning:sklearn",
    "ignore:Falling back to prediction using DMatrix due to mismatched devices:UserWarning:xgboost",
    "ignore:Skipping features without any observed values:UserWarning:sklearn",
    "ignore:The '.*dataloader' does not have many workers:UserWarning:lightning",
    "ignore:CheckpointDir.*exists and is not empty:UserWarning:lightning",
    "ignore:The number of training batches.*smaller than.*log_every_n_steps:UserWarning:lightning",
    "ignore:GPU available but not used:UserWarning:lightning",
    "ignore:You are trying to `self.log\\(\\)`.*trainer.*not registered:UserWarning:lightning",
    "ignore:Found.*module.*in val module that:UserWarning:lightning",
    # pytest-benchmark auto-disables itself under xdist (the default suite runs with -n); the benchmark tests are exercised for correctness, timing happens in the dedicated standalone benchmark workflow.
    "ignore:Benchmarks are automatically disabled because xdist plugin is active:pytest_benchmark.logger.PytestBenchmarkWarning",
    # joblib/loky resource_tracker noise on Windows: the loky worker memmap-folder cleanup races the OS file deletion at shutdown (FileNotFoundError / "leaked folder objects"). Third-party, unfixable here; the in-process variant is filtered, the resource-tracker-subprocess variant is harmless shutdown stderr.
    "ignore:resource_tracker:UserWarning",
    # numba GPU under-utilisation hints on the tiny synthetic GPU-test shapes (grid size N): performance advice, not a defect; the production shapes that justify the kernels are far larger.
    "ignore:Grid size.*will likely result in GPU under-utilization:numba.core.errors.NumbaPerformanceWarning",
    # cupy can't auto-detect a CUDA_PATH on this layout (it works regardless via the bundled libs); the mlframe auto-config sets CUDA_PATH for numba, cupy just emits this once.
    "ignore:CUDA path could not be detected:UserWarning:cupy",
    # shap.summary_plot seeds the legacy global numpy RNG internally (np.random.seed) -> numpy 2.x FutureWarning; third-party, not an mlframe call.
    "ignore:The NumPy global RNG was seeded by calling `np.random.seed`:FutureWarning",
    # scipy spearman/pearson on a constant input column (degenerate synthetic fixtures): correlation undefined -> the caller already orients to the stable default; third-party advisory.
    "ignore:An input array is constant.*correlation coefficient is not defined:",
    # polars LazyFrame.columns schema-resolve perf hint surfaced via a defensive duck-typed ``hasattr(X, 'columns')`` probe in degenerate-column detection; advisory only.
    "ignore:Determining the column names of a LazyFrame requires resolving its schema:",
]
log_cli = false

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/mlframe"]
omit = [
    "tests/*",
    "legacy/*",
    "benchmarks/*",
    "profiling/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
    "*/integrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]
precision = 2
show_missing = true

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
# B101 (assert_used): assertions throughout this codebase police internal invariants, not a
# security boundary -- 85 of 89 current findings are this single, non-actionable class.
skips = ["B101"]

# ---------------------------------------------------------------------------
# Codespell
# ---------------------------------------------------------------------------
[tool.codespell]
# Every entry below is a confirmed false positive from the 2026-07-08 sweep: a domain
# abbreviation (MIs=mutual informations, ALS=alternating least squares, MAPE/mape=mean
# absolute percentage error, LAMA/lama=LightAutoML, ACI=adaptive conformal inference,
# COO=coordinate sparse format, ttest/disjointness/unparseable=valid English), or a
# short substring codespell matched inside a longer identifier/comment fragment
# (strat/ser/clen/fo/anc/mis/numer/sav/bu/ans/ot/qest/OLL), or a hyphenated spelling
# choice that is not a typo (re-use/re-used/re-using/re-uses).
ignore-words-list = "nd,hist,te,ith,ba,thi,fpr,tre,strat,ser,clen,fo,anc,mis,als,mis,mape,lama,aci,coo,oll,ot,qest,ttest,disjointness,unparseable,numer,sav,bu,ans,re-use,re-used,re-using,re-uses,compilability,accreting,lightening"

# ---------------------------------------------------------------------------
# Deptry (unused / missing / transitive dependency scan). NOT wired into CI yet -- a local
# `uvx deptry .` dry run (2026-07-08) produced ~37k DEP001 findings, almost entirely PyPI-name
# vs. import-name mismatches (e.g. scikit-learn -> sklearn) deptry needs an explicit
# [tool.deptry.package_module_name_map] for. Config kept here so the tool is available for a
# deliberate local tuning pass; see the ci.yml lint job comment for the deferred-CI-step note.
# ---------------------------------------------------------------------------
[tool.deptry]
exclude = ["tests", "scripts", "legacy", "benchmarks", "_benchmarks", "profiling", ".venv", "build", "dist"]

[tool.deptry.per_rule_ignores]
# DEP002 (unused declared dependency): many optional extras are declared for callers who reach
# the underlying package directly (or via a lazily-imported code path deptry's static scan can't
# always follow through the optional-dependency try/except gates used throughout mlframe).
DEP002 = ["catboost", "xgboost", "lightgbm", "torch", "pytorch-lightning", "cupy", "shap", "optuna"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 160
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
  | __pycache__
  | legacy
)/
'''

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 160
target-version = "py39"
exclude = ["tests", "scripts", ".git", "__pycache__", "build", "dist", "legacy", "benchmarks", "_benchmarks", "profiling"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "DTZ",  # naive-datetime usage (real bug class: silent local/UTC ambiguity, deprecated utcnow())
    "A",    # builtin-shadowing names
    "T20",  # stray print() -- this project routes diagnostics through logger
]
ignore = [
    "E501",   # line-length: project uses 160 chars (CLAUDE.md repeated rule), black + black-line-length above enforce visually
    "E401",   # multiple imports on one line: explicit ``import a, b`` is project-idiomatic in a few helpers; not worth churn
    "E402",   # module-level import not at top: legitimate for try/except optional-dep gates (cupy, polars, torch)
    "E701",   # multiple statements on one line (colon): used in compact one-liners like ``if x: continue``
    "E702",   # multiple statements on one line (semicolon): used in compact one-liners like ``a = 1; b = 2``
    "I001",   # unsorted imports: isort runs separately; ruff's isort variant collides with our black + manual section order
    "N802",   # function name should be lowercase: legitimately mixed-case in math identifiers (e.g. ``computeFFT`` interop)
    "N803",   # arg name should be lowercase: sklearn-API surface uses X / Y / Xt convention required by check_estimator
    "N806",   # variable in function should be lowercase: same as N803 -- X / Y / Xt locals throughout estimator wrappers
    "B006",   # mutable default arg: kept open; some configs use dataclass-like helpers where caller never mutates; consider re-enabling case-by-case
    "F541",   # f-string without placeholders: tolerated in log lines that get placeholders added later in dev
    "UP031",  # printf-style %: keep for ``logger.info("... %s ...", val)`` lazy-format pattern (mandatory under structured logging)
    "UP006",  # use ``list`` / ``dict`` over typing.List: project targets 3.9 minimum where the deferred annotation form needs from __future__ import; keep typing.List for ABI clarity
    "UP007",  # use ``X | Y`` over Union: same 3.9 concern; ``Union`` evaluates eagerly without ``from __future__ import annotations``
    "UP045",  # use ``X | None`` over Optional: same 3.9 concern
    "UP037",  # quoted annotation: leave because we use forward references in dataclass slots heavily
    "F403",   # ``from x import *``: intentional in several namespace modules
    "F405",   # name may be undefined / from star-import: consequence of intentional F403, not a bug
    "B904",   # raise ... from inside except: stylistic, not a correctness issue
    "B009",   # getattr(x, "const"): stylistic
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["N801"]
"src/mlframe/training/_profile_*.py" = ["B023"]
# T201 (print found): CLI entry points and interactive profile/demo/showcase scripts print to
# stdout by design -- that IS their interface, not a lint issue vs. converting to logger calls.
"src/mlframe/system/kernel_tuning_cache/__init__.py" = ["T201"]
"src/mlframe/**/_profile_*.py" = ["T201"]
"src/mlframe/**/_smoke_*.py" = ["T201"]
"src/mlframe/**/_*_showcase.py" = ["T201"]
# Vendored third-party model code -- left at upstream shape.
"src/mlframe/feature_selection/filters/_vendored/**" = ["T201", "A001", "A002"]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
# The project's minimum RUNTIME support is still 3.9 (see [project] requires-python);
# this is only the syntax-checking target mypy 2.x type-checks against, and mypy 2.x
# dropped 3.9 support for that setting (raises "Python 3.9 is not supported" otherwise).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
# Ratchet added 2026-07-08 after the mypy sweep closed the error backlog to ~0: flags now-dead
# `# type: ignore` comments (zero true-positive burden today; guards against future drift).
warn_unused_ignores = true
exclude = "(legacy|benchmarks|profiling)/"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Strict-mode beachhead: mlframe.calibration is the smallest subpackage (5 files, ~1.3 kLOC total)
# with a stable public surface, low optional-dep churn (only ``post.py`` pulls heavy deps and gates
# them lazily), and tight scope (probability calibration metrics + post-hoc calibrators). Adopting
# strict mode here first surfaces type drift on the smallest blast radius; expansion to other
# subpackages should follow only after this one has been clean for one release.
# Re-verified clean 2026-07-06: a prior "clean" claim here had gone stale (drifted to ~90 real
# errors across all 5 files with no CI enforcement to catch it -- see the CI mypy step in
# .github/workflows/ci.yml). Fixed all of them (missing/incomplete annotations, implicit-Optional
# defaults, Any-returns needing an explicit np.asarray/float cast) without weakening this override,
# plus one genuine bug the annotation pass surfaced: quality.make_custom_calibration_plot indexed
# `ax_probs[plot_idx]` even when skip_plotting=True (ax_probs is None then) -- TypeError. See
# tests/calibration/test_regression_quality_unbound_and_guard.py for the regression test.
[[tool.mypy.overrides]]
module = "mlframe.calibration.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true

# numba ships no py.typed marker, so mypy can't see njit/prange are real public attributes and
# flags every `from numba import njit` as attr-defined -- not a real type error, just a stub gap.
[[tool.mypy.overrides]]
module = "numba"
follow_imports = "skip"
follow_imports_for_stubs = true

# Second strict-mode beachhead: ``mlframe.utils.safe_pickle`` (162 LOC) -- shipped post-2026-05 with
# full annotations + ``from __future__ import annotations``, public surface consumed by the four
# pickle entry points (predict / inference / FE cache / composite cache) so type drift would cascade
# straight to the on-disk format. Other utils modules (eda, experiments, misc, text, nan_safe) still
# use the legacy ``from typing import *`` pattern, incomplete annotations, or numpy-return-any
# patterns; they remain off strict-mode until dedicated typing passes land them.
[[tool.mypy.overrides]]
module = "mlframe.utils.safe_pickle"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true

# Beachhead expansion (per the gradual-strict plan): four already-well-typed, cohesive leaf modules
# that surfaced 0-3 errors each under strict mode and are now clean:
#   * mlframe.system._gpu_guard            -- 0 errors (fully annotated GPU import guard)
#   * mlframe.metrics._numba_params        -- 1 (shared njit kwargs + length-check guard)
#   * mlframe.metrics.rank_correlation     -- 1 (Spearman njit kernels; np-scalar float() casts)
#   * mlframe.metrics._core_precision_mape -- 3 (precision / classification-report / MAPE kernels)
# All are self-contained numba/kernel leaves with a stable public surface and low optional-dep churn,
# so the blast radius stays small. Further metrics.* / core.* modules join only after a dedicated
# typing pass drives their remaining np-return-any / untyped-def counts to zero.
[[tool.mypy.overrides]]
module = [
    "mlframe.system._gpu_guard",
    "mlframe.metrics._numba_params",
    "mlframe.metrics.rank_correlation",
    "mlframe.metrics._core_precision_mape",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
